Updated Review Controller and added JSON Body Support
