# web/swagger.json
@@ -1,169 +1,228 @@
 {
-    "swagger": "2.0",
-    "info": {
-        "title": "StarredUp API",
-        "version": "1.0"
-    },
-    "host": "127.0.0.1:8000",
-    "schemes": [
-        "http"
-    ],
-    "paths": {
-        "/products": {},
-        "/reviews": {},
-        "/swagger": {
-            "get": {
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    }
-                }
-            }
-        },
-        "/products/{productId}": {
-            "get": {
-                "tags": [
-                    "products"
-                ],
-                "summary": "Get a single product by ID",
-                "description": "Return JSON object of a single product",
-                "operationId": "getProduct",
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "productId",
-                        "in": "path",
-                        "description": "Product ID of the desired product",
-                        "required": true,
-                        "type": "integer"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success => [product => {product}]"
-                    },
-                    "404": {
-                        "description": "No product found for ID: {productId}"
-                    }
-                }
-            }
-        },
-        "/products/add": {
-            "post": {
-                "tags": [
-                    "products"
-                ],
-                "summary": "Save or Update a single product with a payload",
-                "description": "Return JSON with the effected product ID",
-                "operationId": "addProduct",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "body",
-                        "in": "body",
-                        "description": "Update a product by adding the productId to the payload",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/Product"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success => [productId => {productId}]"
-                    },
-                    "404": {
-                        "description": "No product found for id {productId}"
-                    }
-                }
-            }
-        },
-        "/products/{productId}/remove": {
-            "post": {
-                "tags": [
-                    "products"
-                ],
-                "summary": "Deactivate a product",
-                "description": "Return JSON object of the effected product and isActive status",
-                "operationId": "removeProduct",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "productId",
-                        "in": "path",
-                        "description": "The product ID of the product to be deactivated",
-                        "required": true,
-                        "type": "integer"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success => [productId => {productId}, isActive => {isActive}]"
-                    },
-                    "404": {
-                        "description": "No product found for ID: {productId}"
-                    },
-                    "409": {
-                        "description": "Product has already been removed"
-                    }
-                }
-            }
+  "swagger" : "2.0",
+  "info" : {
+    "version" : "1.0",
+    "title" : "StarredUp API"
+  },
+  "host" : "127.0.0.1:4433",
+  "schemes" : [ "http" ],
+  "paths" : {
+    "/products" : { },
+    "/reviews" : { },
+    "/swagger" : {
+      "get" : {
+        "parameters" : [ ],
+        "responses" : {
+          "200" : {
+            "description" : "Success"
+          }
         }
+      }
     },
-    "definitions": {
-        "Product": {
-            "required": [
-                "productName",
-                "upc"
-            ],
-            "properties": {
-                "productId": {
-                    "type": "integer",
-                    "example": 1
-                },
-                "productName": {
-                    "type": "string",
-                    "example": "Amazon Echo"
-                },
-                "productDescription": {
-                    "type": "string",
-                    "example": "null"
-                },
-                "productRating": {
-                    "type": "number",
-                    "format": "float",
-                    "example": "null"
-                },
-                "reviewCount": {
-                    "type": "integer",
-                    "example": "null"
-                },
-                "productManufacturer": {
-                    "type": "string",
-                    "example": "Amazon"
-                },
-                "upc": {
-                    "type": "string",
-                    "example": "848719071733"
-                },
-                "productImage": {
-                    "type": "string",
-                    "example": "null"
-                }
-            },
-            "type": "object"
+    "/products/{productId}" : {
+      "get" : {
+        "tags" : [ "products" ],
+        "summary" : "Get a single product by ID",
+        "description" : "Return JSON object of a single product",
+        "operationId" : "getProduct",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "productId",
+          "in" : "path",
+          "description" : "Product ID of the desired product",
+          "required" : true,
+          "type" : "integer"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Success => [product => {product}]"
+          },
+          "404" : {
+            "description" : "No product found for ID: {productId}"
+          }
         }
+      }
+    },
+    "/products/add" : {
+      "post" : {
+        "tags" : [ "products" ],
+        "summary" : "Save or Update a single product with a payload",
+        "description" : "Return JSON with the effected product ID",
+        "operationId" : "addProduct",
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "description" : "Update a product by adding the productId to the payload",
+          "required" : true,
+          "schema" : {
+            "$ref" : "#/definitions/Product"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Success => [productId => {productId}]"
+          },
+          "404" : {
+            "description" : "No product found for id {productId}"
+          }
+        }
+      }
+    },
+    "/products/{productId}/remove" : {
+      "post" : {
+        "tags" : [ "products" ],
+        "summary" : "Deactivate a product",
+        "description" : "Return JSON object of the effected product and isActive status",
+        "operationId" : "removeProduct",
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "productId",
+          "in" : "path",
+          "description" : "The product ID of the product to be deactivated",
+          "required" : true,
+          "type" : "integer"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Success => [productId => {productId}, isActive => {isActive}]"
+          },
+          "404" : {
+            "description" : "No product found for ID: {productId}"
+          },
+          "409" : {
+            "description" : "Product has already been removed"
+          }
+        }
+      }
+    },
+    "/reviews/{reviewId}" : {
+      "get" : {
+        "tags" : [ "reviews" ],
+        "summary" : "Get a single review by ID",
+        "description" : "Return JSON object of a single review",
+        "operationId" : "getReview",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "reviewId",
+          "in" : "path",
+          "description" : "Review ID of the desired review",
+          "required" : true,
+          "type" : "integer"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Success => [product => {product}]"
+          },
+          "404" : {
+            "description" : "No product found for ID: {productId}"
+          }
+        }
+      }
+    },
+    "/reviews/add" : {
+      "post" : {
+        "tags" : [ "reviews" ],
+        "summary" : "Adds a new review",
+        "description" : "Adds a new review",
+        "operationId" : "addReview",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "body",
+          "in" : "body",
+          "description" : "Updates a review based on this data",
+          "required" : true,
+          "schema" : {
+            "$ref" : "#/definitions/Review"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Success => [product => {product}]"
+          },
+          "404" : {
+            "description" : "No product found for ID: {productId}"
+          }
+        }
+      }
     }
+  },
+  "definitions" : {
+    "Product" : {
+      "type" : "object",
+      "required" : [ "productName", "upc" ],
+      "properties" : {
+        "productId" : {
+          "type" : "integer",
+          "example" : 1
+        },
+        "productName" : {
+          "type" : "string",
+          "example" : "Amazon Echo"
+        },
+        "productDescription" : {
+          "type" : "string",
+          "example" : "null"
+        },
+        "productRating" : {
+          "type" : "number",
+          "format" : "float",
+          "example" : "null"
+        },
+        "reviewCount" : {
+          "type" : "integer",
+          "example" : "null"
+        },
+        "productManufacturer" : {
+          "type" : "string",
+          "example" : "Amazon"
+        },
+        "upc" : {
+          "type" : "string",
+          "example" : "848719071733"
+        },
+        "productImage" : {
+          "type" : "string",
+          "example" : "null"
+        }
+      }
+    },
+    "Review" : {
+      "type" : "object",
+      "required" : [ "reviewId"],
+      "properties" : {
+        "reviewId" : {
+          "type" : "integer",
+          "example" : 1
+        },
+        "productId" : {
+          "type" : "integer",
+          "example" : 1
+        },
+        "memberId" : {
+          "type" : "integer",
+          "example" : 1
+        },
+        "originalMemberId" : {
+          "type" : "integer",
+          "example" : 1
+        },
+        "rating" : {
+          "type" : "number",
+          "format" : "double",
+          "example" : 4.5
+        },
+        "reviewTitle" : {
+          "type" : "string",
+          "example" : "Very Good"
+        },
+        "description" : {
+          "type" : "string",
+          "example" : "Great"
+        }
+      }
+    }
+  }
 }
